# telebot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md
.devcontainer/: Dockerfile.dev  devcontainer.json
db/: creation.sql
scripts/: build_image.sh  get_version.sh  push_image.sh  run_telebot.sh
src/: chat.rs  constants.rs  db.rs  main.rs  milk_price.rs  services.rs
