[package]
name = "telebot"
version = "0.2.0"
edition = "2021"

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
futures = "0.3"
tokio = { version = "1.8", features = ["full"] }
dotenv = "0.15.0"
scraper = "0.19.0"
reqwest = "0.12.4"
mockito = "1.4.0"
thiserror = "1.0.61"
once_cell = "1.19.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "sqlite"] }
regex = "1.10.5"
